// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeContainerDirective getMapping should render a mapped container 1`] = `
<div
  id="root0"
>
  
  <br-container-test>
    <a />
  </br-container-test>
</div>
`;

exports[`BrNodeContainerDirective getMapping should render an inline container 1`] = `
<div
  id="root2"
>
  
  <br-container-inline />
</div>
`;

exports[`BrNodeContainerDirective getMapping should render an ordered list container 1`] = `
<div
  id="root3"
>
  
  <br-container-ordered-list />
</div>
`;

exports[`BrNodeContainerDirective getMapping should render box container by default 1`] = `
<div
  id="root1"
>
  
  <br-container-box />
</div>
`;
